--- a/app/src/main/res/layout/activity_location_log.xml
+++ b/app/src/main/res/layout/activity_location_log.xml
@@ -10,39 +10,25 @@
 
     <Button
         android:id="@+id/start_log_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="30dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:text="@string/start_log_button_label" />
+        android:text="@string/start_log_button_label"
+        style="@style/CenterHoriNoCapButton"/>
 
     <Button
         android:id="@+id/continue_log_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_below="@id/start_log_button"
-        android:layout_margin="30dp"
-        android:layout_centerHorizontal="true"
-        android:text="@string/continue_log_button_label" />
+        android:text="@string/continue_log_button_label"
+        style="@style/CenterHoriNoCapButton"/>
 
     <Button
         android:id="@+id/stop_log_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_below="@id/continue_log_button"
-        android:layout_margin="30dp"
-        android:layout_centerHorizontal="true"
-        android:text="@string/stop_log_button_label" />
+        android:text="@string/stop_log_button_label"
+        style="@style/CenterHoriNoCapButton"/>
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true">
+        style="@style/layout_AllAlignParentTrueHWwrpcnt">
 
         <Button
             android:layout_width="wrap_content"
