--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -23,8 +23,8 @@
         android:id="@+id/register_text_view2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_below="@id/register_text_view1"
+        android:layout_centerHorizontal="true"
         android:text="@string/register_driver_device"
         android:textAllCaps="false"
         android:textSize="18sp" />
@@ -33,14 +33,14 @@
         android:id="@+id/registration_form_layout_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/register_text_view2"
-        android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@id/register_text_view2"
 
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingTop="@dimen/activity_vertical_margin">
 
         <TextView
             android:layout_width="wrap_content"
@@ -50,24 +50,18 @@
         <EditText
             android:id="@+id/auto_licence_edit_text"
             android:layout_width="0dp"
-            android:layout_weight="2"
             android:layout_height="wrap_content"
-            android:inputType="text"
-            />
+            android:layout_weight="2"
+            android:inputType="text" />
 
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/registration_form_layout_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/layout_AllAlignParentTrueHWwrpcnt"
         android:layout_below="@id/registration_form_layout_1"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingTop="@dimen/activity_vertical_margin">
 
         <TextView
             android:layout_width="wrap_content"
@@ -76,8 +70,8 @@
 
         <EditText
             android:id="@+id/driver_name_edit_text"
-            android:layout_height="wrap_content"
             android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:inputType="text" />
 
@@ -85,15 +79,11 @@
 
     <LinearLayout
         android:id="@+id/registration_form_layout_3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/layout_AllAlignParentTrueHWwrpcnt"
         android:layout_below="@id/registration_form_layout_2"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingTop="@dimen/activity_vertical_margin">
+
 
         <TextView
             android:layout_width="wrap_content"
@@ -110,13 +100,9 @@
     </LinearLayout>
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/CenterHoriNoCapButton"
         android:layout_below="@id/registration_form_layout_3"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="60dp"
-        android:text="@string/register_button_label"
-        android:textAllCaps="true"
-        android:onClick="registerDriverAndDevice" />
+        android:onClick="registerDriverAndDevice"
+        android:text="@string/register_button_label" />
 
 </RelativeLayout>
