stores gps location in sharedpref; emu not getting lastknownlocation though; fixes #2 fixes #8

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -107,9 +107,38 @@
         <TextView
             style="@style/layout_HWwrap_content"
             android:text="@string/date_registered_label" />
+
         <TextView
             android:id="@+id/registration_date_display_text_view"
             style="@style/layout_HWwrap_content" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/registration_form_layout_4"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="lat:" />
+
+        <TextView
+            android:id="@+id/register_lattitude"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="lon:" />
+
+        <TextView
+            android:id="@+id/register_longitude"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
