--- a/app/src/main/res/layout/activity_middle_menu.xml
+++ b/app/src/main/res/layout/activity_middle_menu.xml
@@ -6,13 +6,14 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.data2sense.gramasamy.autotrack.LocationLogActivity">
+    tools:context="com.data2sense.gramasamy.autotrack.MiddleMenuActivity">
 
     <Button
         android:id="@+id/start_log_button"
         android:layout_alignParentTop="true"
         android:text="@string/start_log_button_label"
-        style="@style/CenterHoriNoCapButton"/>
+        style="@style/CenterHoriNoCapButton"
+        android:onClick="startLocationLoggingActivity"/>
 
     <Button
         android:id="@+id/continue_log_button"
